--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -78,10 +78,11 @@ publishing {
         }
         repositories {
             maven {
-                url = uri("https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/")
+                name = "OSSRH"
+                url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
                 credentials {
-                    username = project.properties["username"].toString()
-                    password = project.properties["password"].toString()
+                    username = System.getenv("MAVEN_USERNAME")
+                    password = System.getenv("MAVEN_PASSWORD")
                 }
             }
         }
