--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -8,7 +8,7 @@ plugins {
     id 'signing'
 }
 
-archivesBaseName "finazon-grpc-java"
+archivesBaseName = "finazon-grpc-java"
 
 repositories {
     mavenCentral()
@@ -21,6 +21,7 @@ dependencies {
     implementation "io.grpc:grpc-stub:${grpcVersion}"
     api "io.grpc:grpc-protobuf:${grpcVersion}"
     api "io.grpc:grpc-services:${grpcVersion}"
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation "com.google.auth:google-auth-library-oauth2-http:1.18.0"
 }
 
@@ -50,7 +51,13 @@ java {
     withJavadocJar()
     withSourcesJar()
 }
-
+javadoc {
+    options.addFileOption './src'
+    options.encoding = 'UTF-8'
+}
+tasks.withType(Javadoc).configureEach {
+    options.addStringOption('Xdoclint:-missing', '-quiet')
+}
 publishing {
     publications {
         mavenJava(MavenPublication) {
