fix examples lib dependency

--- a/build-logic/src/main/groovy/example.java-conventions.gradle
+++ b/build-logic/src/main/groovy/example.java-conventions.gradle
@@ -9,6 +9,6 @@ repositories {
 }
 
 dependencies {
-    implementation "io.finazon:finazon-grpc-java:${version}"
+    implementation project(":lib")
     runtimeOnly "io.grpc:grpc-netty-shaded:${grpcVersion}"
 }
